2001-09-17  Andras Timar  <timar@gnome.hu>

        * hu.po: converted to UTF-8.

2001-08-29  Sven Neumann  <sven@gimp.org>

	* de.po: converted to UTF-8.

2001-07-22  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

2001-07-18  Fatih Demir <kabalak@gtranslator.org>

	* tr.po: Updated Turkish translation by Alper Ersoy.

2001-07-17  Fatih Demir <kabalak@gtranslator.org>

	* tr.po: Updated Turkish translation by Alper Ersoy.

2001-07-14  Fatih Demir <kabalak@gtranslator.org>

	* tr.po: Updated Turkish translation by Alper Ersoy.

2001-06-07  Michael Natterer  <mitch@gimp.org>

	* Makefile.in.in: some build fixes.

	* zh_TW.Big5.po: new dummy file.

2001-05-25  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

2001-05-20  Michael Natterer  <mitch@gimp.org>

	* ca.po
	* en_GB.po
	* ga.po
	* gl.po
	* hr.po
	* hu.po
	* it.po
	* ko.po
	* nl.po
	* pt_BR.po
	* ro.po
	* sk.po
	* sv.po: fixed invalid encoding specs.

2001-03-25  Fatih Demir <kabalak@gtranslator.org>

	* tr.po: Copied over from gimp-1-2 branch.

2001-02-17  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

2000-12-29  Rodrigo Sancho Senosiain  <ruy_ikari@bigfoot.com>

	* es.po: Updated spanish translation

2000-10-29  Artur Polaczynski <artie@kmfms.com>

	* pl.po: updated translation.

Thu Oct 19 22:48:22 CEST 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

2000-06-04  Valek Filippov  <frob@df.ru>

	* ru.po: Updated russian translation.

Wed May 31 13:38:18 CEST 2000  Stanislav Brabec  <utx@penguin.cz>

	* cs.po: Updated translation.

2000-05-26  Sven Neumann  <sven@gimp.org>

	* de.po: updated german translation

2000-05-23  Kjartan Maraas  <kmaraas@gnu.org>

	* no.po: Updated Norwegian translation.
	
2000-05-23  Sven Neumann  <sven@gimp.org>

	* de.po: updated german translation

2000-05-22  Sven Neumann  <sven@gimp.org>

	* de.po: updated german translation

Mon May 22 11:54:43 CEST 2000  Stanislav Brabec  <utx@penguin.cz>
