@@ -9,9 +9,9 @@ if ($MSGFMT =~ /./ && $MSGFMT ne "no") {
       my ($po) = /(.*)\.po$/;
       print " $po";
       $install .= "	@-\$(MKPATH) \$(datadir)/locale/$po/LC_MESSAGES\n".
-                  "	-\$(CP) $po.gmo \$(datadir)/locale/$po/LC_MESSAGES/gimp-perl.mo\n".
-                  "	@-\$(CHMOD) 644 \$(datadir)/locale/$po/LC_MESSAGES/gimp-perl.mo\n";
-      $uninstall .= "	\$(RM_F) \$(datadir)/locale/$po/LC_MESSAGES/gimp-perl.mo\n";
+                  "	-\$(CP) $po.gmo \$(datadir)/locale/$po/LC_MESSAGES/gimp14-perl.mo\n".
+                  "	@-\$(CHMOD) 644 \$(datadir)/locale/$po/LC_MESSAGES/gimp14-perl.mo\n";
+      $uninstall .= "	\$(RM_F) \$(datadir)/locale/$po/LC_MESSAGES/gimp14-perl.mo\n";
       $mofiles   .= " $po.gmo";
    }
 } else {
@@ -23,7 +23,7 @@ print "\n";
 WriteMakefile(
     NAME	=> 'i18n',
     macro	=> \%cfg,
-    realclean	=> { FILES => "gimp-perl.pot" },
+    realclean	=> { FILES => "gimp14-perl.pot" },
     clean	=> { FILES => "*.mo" },
 );
 
@@ -35,8 +35,8 @@ datadir  = $datadir
 %.gmo: %.po
 	$MSGFMT -o \$*.gmo \$*.po
 
-%.po: gimp-perl.pot
-	-msgmerge -w 83 \$*.po gimp-perl.pot >\$*.po~
+%.po: gimp14-perl.pot
+	-msgmerge -w 83 \$*.po gimp14-perl.pot >\$*.po~
 	-if cmp -s \$*.po~ \$*.po; then rm -f \$*.po~ ; else mv \$*.po~ \$*.po; fi
 
 all :: $alltarget
@@ -46,11 +46,11 @@ update-gmo: $mofiles
 update-po: update-pot
 $updatepo
 
-gimp-perl.pot: update-pot
+gimp14-perl.pot: update-pot
 
 update-pot: force
-	\$(PERL) ../pxgettext `find .. -type f -print | grep \'\\.pm\$\$\\|\\.xs\$\$\\|examples/\\|Perl-Server\'` > gimp-perl.pot~
-	#if cmp -s gimp-perl.pot~ gimp-perl.pot; then rm -f gimp-perl.pot~ ; else mv gimp-perl.pot~ gimp-perl.pot; fi
+	\$(PERL) ../pxgettext `find .. -type f -print | grep \'\\.pm\$\$\\|\\.xs\$\$\\|examples/\\|Perl-Server\'` > gimp14-perl.pot~
+	#if cmp -s gimp14-perl.pot~ gimp14-perl.pot; then rm -f gimp14-perl.pot~ ; else mv gimp14-perl.pot~ gimp14-perl.pot; fi
 
 force:
 
