@@ -6,7 +6,7 @@
 # but which still want to provide support for the GNU gettext functionality.
 # Please note that the actual code is *not* freely available.
 
-PACKAGE = gimp-perl
+PACKAGE = gimp14-perl
 VERSION = @VERSION@
 
 SHELL = /bin/sh
@@ -40,7 +40,7 @@ DEFS = @DEFS@
 CFLAGS = @CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 
-INCLUDES = -I.. -I$(top_srcdir)/intl
+INCLUDES = -I..
 
 COMPILE = $(CC) -c $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) $(XCFLAGS)
 
