@@ -1,6 +1,13 @@
+2001-09-27  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.in.in: different version for AM_GLIB_GNU_GETTEXT.
+
+	* Makefile.PL
+	* Makefile.in.in: changed package name to gimp14-perl.
+
 2001-09-17  Andras Timar  <timar@gnome.hu>
 
-        * hu.po: converted to UTF-8.
+	* hu.po: converted to UTF-8.
 
 2001-08-29  Sven Neumann  <sven@gimp.org>
 
